Add iframe functionality

--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -23,5 +23,8 @@ Hello, <span th:text="${acctId}"></span>!
 
 <textarea id="phraseDiv" class="questionInputTextArea"></textarea>
 
+<iframe id="app" src="">
+</iframe>
+
 </body>
 </html>
