--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,2 +1,11 @@
 #mic-2 { display: none; }
-#app { width: 100%; border: 0; }
+#app { width: 100%; height: 800px; border: 0; }
+
+#notes-container {
+  width: 80%;
+  padding-left: 2em;
+
+  #phraseDiv { width: 80%; display: inline; }
+  .mic { vertical-align: top; }
+
+}
