--- a/src/main/resources/templates/note.html
+++ b/src/main/resources/templates/note.html
@@ -1,12 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Notes</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://aka.ms/csspeech/jsbrowserpackageraw"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
+    <script th:src="@{/js/index.js}"></script>
+    <script th:src="@{/js/noteSpeech.js}"></script>
+    <link th:href="@{/css/index.css}" rel="stylesheet"/>
 </head>
 <body>
-Enter a note here:
-<textarea id="phraseDiv"></textarea>
-<button>Save</button>
+<nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+    <div class="navbar-brand">Add Note</div>
+</nav>
+<input type="hidden" id="speechKey" th:value="${speechKey}"/>
+
+<div id="notes-container">
+
+    <div class="mb-3 row">
+        <label for="client" class="col-sm-2 col-form-label">Client</label>
+        <div class="col-sm-10">
+            <input type="text" readonly class="form-control-plaintext" id="client" value="John Smith 123-45678">
+        </div>
+    </div>
+
+    <div class="mb-3 row">
+        <label for="category" class="col-sm-2 col-form-label">Category</label>
+        <div class="col-sm-4">
+            <select id="category" class="form-select" aria-label="Default select example">
+                <option selected>Select</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+            </select>
+        </div>
+    </div>
+
+    <div class="mb-3 row">
+        <label class="col-sm-2 col-form-label">Priority</label>
+        <div class="col-sm-4">
+            <input type="radio" class="btn-check" name="options-base" id="option5" autocomplete="off">
+            <label class="btn" for="option5">Low</label>
+
+            <input type="radio" class="btn-check" name="options-base" id="option6" autocomplete="off" checked>
+            <label class="btn" for="option6">Medium</label>
+
+            <input type="radio" class="btn-check" name="options-base" id="option8" autocomplete="off">
+            <label class="btn" for="option8">High</label>
+        </div>
+    </div>
+
+
+    <div class="mb-3 row align-items-center">
+        <label for="phraseDiv" class="col-sm-2 col-form-label">Note</label>
+        <div class="col-sm-10">
+            <textarea id="phraseDiv" class="form-control" rows="4"></textarea>
+            <span id="mic-1" class="mic">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" height=40 width=40 viewBox="0 0 24 24"
+                     stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                          d="M12 18.75a6 6 0 006-6v-1.5m-6 7.5a6 6 0 01-6-6v-1.5m6 7.5v3.75m-3.75 0h7.5M12 15.75a3 3 0 01-3-3V4.5a3 3 0 116 0v8.25a3 3 0 01-3 3z"/>
+                </svg>
+            </span>
+        </div>
+
+    </div>
+
+
+    <button type="submit" class="btn btn-primary mb-3">Save</button>
+</div>
 </body>
+
 </html>
