--- a/src/main/resources/templates/transfer.html
+++ b/src/main/resources/templates/transfer.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Transfer</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
+    <script th:src="@{/js/index.js}"></script>
+    <link th:href="@{/css/index.css}" rel="stylesheet"/>
 </head>
 <body>
-Transfer a client
+<nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+    <div class="navbar-brand">Transfer Client</div>
+</nav>
+
+<div class="mb-3 row">
+    <label for="client" class="col-sm-2 col-form-label">Client</label>
+    <div class="col-sm-10">
+        <input type="text" readonly class="form-control-plaintext" id="client" value="John Smith 123-45678">
+    </div>
+</div>
+
+<div class="mb-3 row">
+    <label for="review-date" class="col-sm-2 col-form-label">Last Review Date</label>
+    <div class="col-sm-10">
+        <input type="text" readonly class="form-control-plaintext" id="review-date" value="01-Mar-2020">
+    </div>
+</div>
+
+<button type="button" class="btn btn-primary">
+    Transfer client to EJC
+</button>
+
 </body>
 </html>
