--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -9,3 +9,19 @@
   .mic { vertical-align: top; }
 
 }
+
+.notesFrame{
+  width:100%;
+  height: 500px;
+}
+
+.transfersFrame{
+  width:100%;
+  height: 300px;
+}
+
+.myLogo{
+  width: 3% !important;
+  //height: 10%;
+  padding-bottom: 62px;
+}
