--- a/src/main/resources/templates/note.html
+++ b/src/main/resources/templates/note.html
@@ -21,7 +21,7 @@
 </nav>
 <input type="hidden" id="speechKey" th:value="${speechKey}"/>
 
-<div id="notes-container">
+<div id="app-container">
 
     <div class="mb-3 row">
         <label for="client" class="col-sm-2 col-form-label">Client</label>
