--- a/src/main/resources/templates/transfer.html
+++ b/src/main/resources/templates/transfer.html
@@ -16,23 +16,27 @@
     <div class="navbar-brand">Transfer Client</div>
 </nav>
 
-<div class="mb-3 row">
-    <label for="client" class="col-sm-2 col-form-label">Client</label>
-    <div class="col-sm-10">
-        <input type="text" readonly class="form-control-plaintext" id="client" value="John Smith 123-45678">
-    </div>
-</div>
+<div id="app-container">
 
-<div class="mb-3 row">
-    <label for="review-date" class="col-sm-2 col-form-label">Last Review Date</label>
-    <div class="col-sm-10">
-        <input type="text" readonly class="form-control-plaintext" id="review-date" value="01-Mar-2020">
+    <div class="mb-3 row">
+        <label for="client" class="col-sm-2 col-form-label">Client</label>
+        <div class="col-sm-10">
+            <input type="text" readonly class="form-control-plaintext" id="client" value="John Smith 123-45678">
+        </div>
     </div>
-</div>
 
-<button type="button" class="btn btn-primary">
-    Transfer client to EJC
-</button>
+    <div class="mb-3 row">
+        <label for="review-date" class="col-sm-2 col-form-label">Last Review Date</label>
+        <div class="col-sm-10">
+            <input type="text" readonly class="form-control-plaintext" id="review-date" value="01-Mar-2020">
+        </div>
+    </div>
+
+    <button type="button" class="btn btn-primary">
+        Transfer client to EJC
+    </button>
+
+</div>
 
 </body>
 </html>
