--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,9 +1,8 @@
 #mic-2 { display: none; }
 #app { width: 100%; height: 800px; border: 0; }
+.navbar { padding: }
 
-#notes-container {
-  width: 80%;
-  padding-left: 2em;
+#app-container {
 
   #phraseDiv { width: 80%; display: inline; }
   .mic { vertical-align: top; }
