--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,4 +1,4 @@
-#mic-2 { display: none; }
+#sorry-message,#spinner { display: none; }
 #app { width: 100%; height: 800px; border: 0; }
 .navbar { padding: }
 
